# resource-hub

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  svelte.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-documentation.yml
about/: index.html
advocate/: index.html
ai-core-concepts/: 404.html  index.html  sitemap.xml
ai-core-concepts/ai-project-lifecycle/: index.html
ai-core-concepts/data/: index.html
ai-core-concepts/evaluating/: index.html
ai-core-concepts/generative-ai/: index.html
ai-core-concepts/image/: index.html
ai-core-concepts/limitations-of-ai/: index.html
ai-core-concepts/next-steps/: index.html
ai-core-concepts/nlp/: index.html
ai-core-concepts/practical/: index.html
ai-core-concepts/reinforcement-learning/: index.html
ai-core-concepts/search/: search_index.json
clinic/: index.html
community/: index.html
diffusion-models/: 404.html  index.html  sitemap.xml
docker-for-science/: 404.html  index.html  sitemap.xml
docs/: about.md  advocate.md  clinic.md  community.md  index.md  software.md  training.md
hands-on-llms/: 404.html  index.html  sitemap.xml
large-language-models/: 404.html  index.html  sitemap.xml
machine-learning-hands-on/: 404.html  index.html  sitemap.xml
overrides/: main.html
packaging-publishing/: 404.html  index.html  sitemap.xml
search/: search_index.json
software/: best-practice.md~  index.html
src/: app.css
stylesheets/: consent.css
training/: index.html
(+190 files in other folders)
