[tool.poetry]
name = "resource-hub"
version = "0.1.0"
description = "The central resource hub for accelerate science"
authors = ["Ryan Daniels <31715811+rkdan@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "resource_hub"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.27.0"
mkdocs-material = "^9.5.44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
